# mavros_offboard_control

./: .gitignore  README.md  square.csv  straight.csv  zigzag.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/px4_msgs/include/px4_msgs/px4_msgs/msg/detail/: cellular_status__struct.h
install/px4_msgs/local/lib/python3.10/dist-packages/px4_msgs/: _px4_msgs_s.ep.rosidl_typesupport_c.c  _px4_msgs_s.ep.rosidl_typesupport_introspection_c.c
install/px4_msgs/local/lib/python3.10/dist-packages/px4_msgs-2.0.1-py3.10.egg-info/: SOURCES.txt
install/px4_msgs/local/lib/python3.10/dist-packages/px4_msgs/msg/: _vehicle_status.py
install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
install/px4_msgs/share/px4_msgs/cmake/: rosidl_cmake-extras.cmake
install/px4_msgs/share/px4_msgs/msg/: CellularStatus.idl
install/px4_offboard_control/lib/px4_offboard_control/: get_pose  offboard_control  offboard_control_default
install/px4_offboard_control/share/ament_index/resource_index/package_run_dependencies/: px4_offboard_control
install/px4_offboard_control/share/ament_index/resource_index/parent_prefix_path/: px4_offboard_control
install/px4_offboard_control/share/px4_offboard_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/px4_offboard_control/share/px4_offboard_control/cmake/: ament_cmake_export_dependencies-extras.cmake  px4_offboard_controlConfig-version.cmake  px4_offboard_controlConfig.cmake
install/px4_offboard_control/share/px4_offboard_control/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/px4_offboard_control/: CMakeLists.txt  package.xml
src/px4_offboard_control/src/: big_path.csv  get_pose.cpp  offboard_control.cpp  offboard_control_default.cpp  offboard_control_timer.cpp  path.csv  path.csv.save  setpoint_visualizer.cpp
src/px4_offboard_control/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/px4_offboard_control/src/log/: latest_build
